--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "trello-clone",
   "version": "1.0.0",
-  "description": "## 📝 Опис проєкту **My Trello** – це веб-додаток для управління завданнями у стилі **Kanban**. Він підтримує: - **CRUD-операції** (створення, редагування, видалення задач) - **Перетягування задач** (Drag & Drop) - **Збереження стану задач у LocalStorage** - **Адаптивний інтерфейс** для роботи на різних пристроях",
+  "description": "## 📝 Опис проєкту **My Trello** – це веб-додаток для управління завданнями у стилі **Kanban**.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"No tests defined\" && exit 0"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dprsnn/trello-clone.git"
+    "url": "https://github.com/dprsnn/trello-clone.git"
   },
   "keywords": [],
   "author": "",
@@ -17,8 +17,4 @@
     "url": "https://github.com/dprsnn/trello-clone/issues"
   },
   "homepage": "https://github.com/dprsnn/trello-clone#readme"
-  "scripts": {
-  "test": "echo \"No tests defined\" && exit 0"
-}
-
 }
